@@ -6,6 +6,7 @@
 [+] plxShow::artAuthorInfos: ajout de #art_author pour afficher l'auteur de l'article
 [+] plxDate: gestion du libellé court des mois
 [+] Template pour la page d'accueil (Administration > Paramètres > Options d'affichage > déroulant "Template de la page d'accueil")
+[+] Administration - rédaction d'un article: vérification de l'unicité de l'url de l'article
 [-] Suppression du paramètre racine dans le fichier de configuration parametres.xml
 BUG fix #4  Gestionnaire de médias: mauvais tri ddu déroulant 'Dossier'
 BUG fix #2  Notice à l'activation d'un plugin si des plugins ont été supprimés manuellement
